--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dj-database-url==0.3.0
 dj-static==0.0.5
 django-toolbelt==0.0.1
 gunicorn==18.0
+httplib2==0.8
 psycopg2==2.5.2
 pystache==0.5.3
 static==1.0.2
